# practice-pandas-scikit-ml

./: README.md  main.py  pyproject.toml
src/algo/: mpc.py
